# ARMv8-Emulator-and-Assembler-in-C

doc/: Report.tex
programs/: led_blink.s
src/: CMakeLists.txt  aliases.c  aliases.h  assemble.c  assemble.h  branching.c  branching.h  dataProcess.c  dataProcess.h  dataProcessImmediate.c  dataProcessImmediate.h  dataProcessRegister.c  dataProcessRegister.h  dataTransfer.c  dataTransfer.h  datatransfer.c  datatransfer.h  emulate.c  misc.c  print  print.c  storeandLoad.c  structure.c  structure.h  structures.c  structures.h  utils.c  utils.h
src/Emulator/: dataProcessImmediate.h  emulate.c  misc.h  storeandLoad.h
